updated css to fix button centering alignment on mobile

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -30,6 +30,7 @@ h1.hero-head {font-size:28px; line-height:36px; margin-bottom:15px; font-weight:
 .btn-special-rev {display:block; max-width:225px; overflow:hidden; padding-left:45px; background:url(/images/slack-logo-bug-rgb.png) no-repeat left 25px center; background-size:25px 25px; background-color:rgba(101,55,126,0.3); border:1px solid rgba(101,55,126,0); color:rgba(255,255,255,1); border-radius:4px; -webkit-transition: all 160ms linear; -moz-transition: all 160ms linear; -ms-transition: all 160ms linear; -o-transition: all 160ms linear; transition: all 160ms linear;}
 .btn-special-rev:hover, .btn-special-rev:focus, .btn-special-rev:active {background-color:rgba(101,55,126,0.5); border:1px solid rgba(101,55,126,0); color:rgba(255,255,255,1); box-shadow:none; outline:none;}
 .bt-special-space {padding-right:10px;}
+.center-btn {margin-right:auto; margin-left:auto;}
 
 /* Banner */
 .banner-wrap {border-bottom:1px solid rgba(34,34,34,1); padding-bottom:15px; background-color:rgba(83,32,111,1);}
